# uwcq

./: .gitmodules  README.md  bower.json  ember-cli-build.js  makefile  package.json  uwcq.sublime-project  uwcq.sublime-workspace
api-tools/: LICENSE  stack.yaml  uwcq-tools.cabal
api-tools/src/: course-info.hs  course-ls.hs  course-sched.hs  courses.hs
api-tools/src/Lib/: Prelude.hs
api-tools/test/: Spec.hs
api-tools/test/Suite/: Lib.hs
app/: index.html  router.js
app/adapters/: application.js  class.js
app/components/: home-course-entry.js  home-search-results.js  home-searchbar.js  schedule-calendar.js
app/controllers/: home.js  schedule.js
app/initializers/: css.js
app/models/: class.js  course.js
app/styles/: app.css  app.scss  globals.scss  home-course-entry.scss  home-search-results.scss  schedule-calendar.scss  schedule.scss
app/templates/: home.hbs  schedule.hbs
app/templates/components/: home-course-entry.hbs  home-head.hbs  home-search-filters.hbs  home-search-results.hbs  home-searchbar.hbs  schedule-calendar.hbs
config/: environment.js
public/api/: course-info.hs
public/api/data/: 4583  courses  cs136-info.json  cs136-sched.json
public/api/v1/: .htaccess  courses  courses.json  dispatch  parseQuery  setupQuery
tests/: index.html
tests/integration/components/: home-foot-test.js  home-head-test.js  home-search-filters-test.js  home-search-results-test.js  index-course-entry-test.js  index-searchbar-test.js  schedule-calendar-test.js
tests/unit/controllers/: schedule-test.js
tests/unit/initializers/: css-test.js
