name:                uwcq-tools
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ylilarry/uwcq-tools#readme
license:             MIT
license-file:        LICENSE
author:              Yu Li
maintainer:          ylilarry@gmail.com
copyright:           2016 Yu Li
category:            uwcq-tools
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
   hs-source-dirs:      src
   -- exposed-modules:     Internal.Prelude
   --                    , XX
   build-depends:       base >= 4.7 && < 5
                      , mtl
                      , extra
                      , NoTrace
   default-language:    Haskell2010

executable course-ls
   hs-source-dirs:      src
   main-is:             course-ls.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , mtl
                      , extra
                      , NoTrace
                      , uwcq-tools
                      , data-extend-generic
                      , json-api == 0.1.1.999
                      , text-show
                      , bytestring
                      , aeson
                      , text
                      , unordered-containers
                      , hashable
   default-language:    Haskell2010

executable course-info
   hs-source-dirs:      src
   main-is:             course-info.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , mtl
                      , extra
                      , NoTrace
                      , uwcq-tools
                      , data-extend-generic
                      , json-api == 0.1.1.999
                      , text-show
                      , bytestring
                      , aeson
                      , text
                      , unordered-containers
                      , hashable
   default-language:    Haskell2010

executable course-sched
   hs-source-dirs:      src
   main-is:             course-sched.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , mtl
                      , extra
                      , NoTrace
                      , uwcq-tools
                      , data-extend-generic
                      , json-api == 0.1.1.999
                      , text-show
                      , bytestring
                      , aeson
                      , text
                      , unordered-containers
                      , hashable
   default-language:    Haskell2010

source-repository head
   type:     git
   location: https://github.com/ylilarry/uwcq-tools
